# sieve

./: LICENSE  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py
sieve/: __init__.py  cli.py  fasta.py  fasta_parser.py  text_parser.py
tests/: P11111.fasta  test.py  test_cli.py  test_fasta.py  test_fasta_parser.py  test_parser.py  test_text_parser.py
tests/fixtures/: SHLD1.fasta  invalid.format
tests/samples/: A0A0S2Z4N5.txt  SHLD1.fasta  pias4.txt
upfilter/: __init__.py  cli.py  fasta_parser.py
