[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "upfilter"
author = "Emma Hatton-Ellis"
author-email = "ehattonellis@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"

[tool.flit.scripts]
upfilter = "upfilter.cli:main"
