[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sieve"
author = "Emma Hatton-Ellis"
author-email = "ehattonellis@gmail.com"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    ]
requires = ["click >=7.0"]
requires-python = ">=3.6"

[tool.flit.scripts]
sieve = "sieve.cli:main"
